--- a/data/style.css
+++ b/data/style.css
@@ -13,6 +13,7 @@ QPushButton:hover {
     background-color: #505050;
 }
 
-QDialog {
-    border-left: 1px solid rgba(191, 191, 191, 0.2);
+QWidget#dat {
+    border-right: 1px solid rgba(191, 191, 191, 0.2);
+    border-bottom: 1px solid rgba(191, 191, 191, 0.2);
 }
